--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,5 +1,4 @@
 .filters {
-    display: block;
     background-color: white;
     height: 70px;
     width: 100%;
@@ -16,7 +15,7 @@ button {
     border-style: none;
     border-radius: 4px;
     float: right;
-    margin: 10px 10px 30px;
+    margin: 11px 11px 30px;
 }
 
 button :hover {
@@ -25,8 +24,6 @@ button :hover {
 
 
 .locations{
-   
-  
     height: 100%;
     width: 25%;
     float: left;
@@ -48,14 +45,15 @@ button :hover {
     display: none;
     background-color: #FAFAFA;
     width: 100%;
-    margin-left: 0px;
-    margin-top: 8px;
-    padding: 25px 0px;
+    margin-left: -1px;
+    margin-top: 1px;
+    padding: 20px 0px;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
+    position: relative;
 }
 .locations:hover .popover{
-    display: block;
+    display: inline-block;
 }
 
 .amenities:hover .popover{
@@ -63,26 +61,24 @@ button :hover {
 }
 ul {
     list-style-type: none;
-    padding: 5px 5px 0px;
-    
-    
 }
+
 h2 {
     font-size: 16px;
-    padding-left: 20px;
-    margin: -1px;
+    padding-left: 30px;
 }
 
 h3 {
     font-weight: 600;
-    margin: 5px 40px 0px;
+    margin-top:20px;
+    margin-bottom: 10px;
     padding-left: 45px;
 }
 
-h4{
+h4 {
     font-weight: 400;
     font-size: 14px;
-    margin: 5px 40px 0px;
+    margin-top: -5px;
+    margin-bottom: 5px;
     padding-left: 45px;
-  
 }
